modificaciones en los .pug

--- a/src/pug/projects.pug
+++ b/src/pug/projects.pug
@@ -1,14 +1,13 @@
 doctype html
-html(lang='en')
+html(lang='es')
 
     head
-
         meta(charset='utf-8')
         meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
         meta(name='description', content='')
         meta(name='author', content='')
 
-        title Modern Business - Start Bootstrap Template
+        title Pablo Moya - Proyectos
 
         // Favicon
         link(rel='icon', type='image/x-icon', href='assets/favicon.ico')
@@ -27,35 +26,76 @@ html(lang='en')
                 .container.px-5.mb-5
                     .text-center.mb-5
                         h1.display-5.fw-bolder.mb-0
-                            span.text-gradient.d-inline Projects
+                            span.text-gradient.d-inline Proyectos
                     .row.gx-5.justify-content-center
 
                         .col-lg-11.col-xl-9.col-xxl-8
 
-                            // Project Card 1
+                            // Project Card 1: ALMEDIN
                             .card.overflow-hidden.shadow.rounded-4.border-0.mb-5
                                 .card-body.p-0
                                     .d-flex.align-items-center
                                         .p-5
-                                            h2.fw-bolder Project Name 1
-                                            p Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!
-                                        img.img-fluid(src='https://dummyimage.com/300x400/343a40/6c757d', alt='...')
+                                            h2.fw-bolder ALMEDIN
+                                            p
+                                                strong Tecnologías: 
+                                                | Java, Quarkus, JWT, Swagger, Junit, React, Typescript.
+                                            p
+                                                strong Descripción: 
+                                                | Trabajo final para la academia Java-React organizada por Softtek y dictada por UMSA. Desarrollado en equipo, distribuimos nuestras tareas utilizando metodologías ágiles. Todos los integrantes nos encargamos tanto del backend como del frontend, así como también de la documentación y las pruebas unitarias. El proyecto consistió en una plataforma diseñada para una obra social, que abarca desde la gestión de turnos y recetas de los afiliados y su grupo familiar, hasta la administración interna de los médicos, consultorios, horarios y turnos.
+                                        img.img-fluid(src='https://dummyimage.com/300x400/343a40/6c757d', alt='Proyecto ALMEDIN')
 
-                            // Project Card 2
+                            // Project Card 2: Calcbsp
+                            .card.overflow-hidden.shadow.rounded-4.border-0.mb-5
+                                .card-body.p-0
+                                    .d-flex.align-items-center
+                                        .p-5
+                                            h2.fw-bolder Calcbsp
+                                            p
+                                                strong Tecnologías: 
+                                                | Rust, GTK.
+                                            p
+                                                strong Descripción: 
+                                                | Desarrollo de una calculadora científica moderna y altamente personalizable, diseñada específicamente para entornos de window managers como bspwm e i3wm. El proyecto surgió como respuesta a la falta de opciones actualizadas y funcionales en el mercado.
+                                            p
+                                                strong Rol: 
+                                                | Responsable del desarrollo completo, desde la implementación de la lógica matemática en Rust (optimizada para velocidad y eficiencia) hasta la creación de una interfaz gráfica intuitiva utilizando GTK.
+                                        img.img-fluid(src='https://dummyimage.com/300x400/343a40/6c757d', alt='Proyecto Calcbsp')
+
+                            // Project Card 3: HOMEBANKING
+                            .card.overflow-hidden.shadow.rounded-4.border-0.mb-5
+                                .card-body.p-0
+                                    .d-flex.align-items-center
+                                        .p-5
+                                            h2.fw-bolder HOMEBANKING
+                                            p
+                                                strong Tecnologías: 
+                                                | HTML, CSS, JavaScript, Java.
+                                            p
+                                                strong Descripción: 
+                                                | Proyecto final para el curso Fullstack Java de MindHub. Una aplicación de home banking diseñada para gestionar cuentas de usuario, transacciones y operaciones financieras.
+                                        img.img-fluid(src='https://dummyimage.com/300x400/343a40/6c757d', alt='Proyecto HOMEBANKING')
+
+                            // Project Card 4: Weather App
                             .card.overflow-hidden.shadow.rounded-4.border-0
                                 .card-body.p-0
                                     .d-flex.align-items-center
                                         .p-5
-                                            h2.fw-bolder Project Name 2
-                                            p Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!
-                                        img.img-fluid(src='https://dummyimage.com/300x400/343a40/6c757d', alt='...')
+                                            h2.fw-bolder Weather App
+                                            p
+                                                strong Tecnologías: 
+                                                | Java.
+                                            p
+                                                strong Descripción: 
+                                                | Desarrollo de una aplicación móvil para consultar el clima. Me encargué de desarrollar la aplicación de acuerdo a los requisitos del proyecto, implementando la lógica necesaria para obtener y mostrar datos meteorológicos en tiempo real.
+                                        img.img-fluid(src='https://dummyimage.com/300x400/343a40/6c757d', alt='Proyecto Weather App')
 
             // Call to action section
             section.py-5.bg-gradient-primary-to-secondary.text-white
                 .container.px-5.my-5
                     .text-center
-                        h2.display-4.fw-bolder.mb-4 Let's build something together
-                        a.btn.btn-outline-light.btn-lg.px-5.py-3.fs-6.fw-bolder(href='contact.html') Contact me
+                        h2.display-4.fw-bolder.mb-4 Construyamos algo juntos
+                        a.btn.btn-outline-light.btn-lg.px-5.py-3.fs-6.fw-bolder(href='contact.html') Contáctame
 
         // Footer
         include includes/footer.pug
