--- a/src/pug/resume.pug
+++ b/src/pug/resume.pug
@@ -1,14 +1,13 @@
 doctype html
-html(lang='en')
+html(lang='es')
 
     head
-
         meta(charset='utf-8')
         meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
         meta(name='description', content='')
         meta(name='author', content='')
 
-        title Personal - Start Bootstrap Template
+        title Pablo Moya - Backend Developer
 
         // Favicon
         link(rel='icon', type='image/x-icon', href='assets/favicon.ico')
@@ -26,7 +25,7 @@ html(lang='en')
             .container.px-5.my-5
                 .text-center.mb-5
                     h1.display-5.fw-bolder.mb-0
-                        span.text-gradient.d-inline Resume
+                        span.text-gradient.d-inline Currículum
                 .row.gx-5.justify-content-center
 
                     .col-lg-11.col-xl-9.col-xxl-8
@@ -34,12 +33,11 @@ html(lang='en')
                         // Experience Section
                         section
                             .d-flex.align-items-center.justify-content-between.mb-4
-                                h2.text-primary.fw-bolder.mb-0 Experience
+                                h2.text-primary.fw-bolder.mb-0 Experiencia Laboral
                                 // Download resume button
-                                // Note: Set the link href target to a PDF file within your project
                                 a.btn.btn-primary.px-4.py-3(href='#!')
                                     .d-inline-block.bi.bi-download.me-2
-                                    | Download Resume
+                                    | Descargar CV
 
                             // Experience Card 1
                             .card.shadow.border-0.rounded-4.mb-5
@@ -47,45 +45,31 @@ html(lang='en')
                                     .row.align-items-center.gx-5
                                         .col.text-center.text-lg-start.mb-4.mb-lg-0
                                             .bg-light.p-4.rounded-4
-                                                .text-primary.fw-bolder.mb-2 2019 - Present
-                                                .small.fw-bolder Web Developer
-                                                .small.text-muted Stark Industries
-                                                .small.text-muted Los Angeles, CA
+                                                .text-primary.fw-bolder.mb-2 08/2023 - 12/2023
+                                                .small.fw-bolder Prácticas Profesionalizantes
+                                                .small.text-muted Teclab Instituto Superior
+                                                .small.text-muted San Juan, Argentina
                                         .col-lg-8
-                                            div Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus laudantium, voluptatem quis repellendus eaque sit animi illo ipsam amet officiis corporis sed aliquam non voluptate corrupti excepturi maxime porro fuga.
+                                            div Desarrollo de endpoints consumidos por el equipo de frontend. Documentación de endpoints mediante Swagger. Optimización de servicios y subida de nuevas versiones al servidor. Testing de endpoints con Postman.
 
-                            // Experience Card 2
+                        // Education Section
+                        section
+                            h2.text-secondary.fw-bolder.mb-4 Educación
+                            
+                            // Education Card 1
                             .card.shadow.border-0.rounded-4.mb-5
                                 .card-body.p-5
                                     .row.align-items-center.gx-5
                                         .col.text-center.text-lg-start.mb-4.mb-lg-0
                                             .bg-light.p-4.rounded-4
-                                                .text-primary.fw-bolder.mb-2 2017 - 2019
-                                                .small.fw-bolder SEM Specialist
-                                                .small.text-muted Wayne Enterprises
-                                                .small.text-muted Gotham City, NY
-                                        .col-lg-8
-                                            div Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus laudantium, voluptatem quis repellendus eaque sit animi illo ipsam amet officiis corporis sed aliquam non voluptate corrupti excepturi maxime porro fuga.
-
-                        // Education Section
-                        section
-                            h2.text-secondary.fw-bolder.mb-4 Education
-                            
-                            // Education Card 1
-                            .card.shadow.border-0.rounded-4.mb-5
-                                .card-body.p-5
-                                     .row.align-items-center.gx-5
-                                        .col.text-center.text-lg-start.mb-4.mb-lg-0
-                                            .bg-light.p-4.rounded-4
-                                                .text-secondary.fw-bolder.mb-2 2015 - 2017
+                                                .text-secondary.fw-bolder.mb-2 2023
                                                 .mb-2
-                                                    .small.fw-bolder Barnett College
-                                                    .small.text-muted Fairfield, NY
+                                                    .small.fw-bolder Teclab Instituto Superior
+                                                    .small.text-muted San Juan, Argentina
                                                 .fst-italic
-                                                    .small.text-muted Master's
-                                                    .small.text-muted Web Development
+                                                    .small.text-muted Técnico Superior en Programación
                                         .col-lg-8
-                                            div Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus laudantium, voluptatem quis repellendus eaque sit animi illo ipsam amet officiis corporis sed aliquam non voluptate corrupti excepturi maxime porro fuga.
+                                            div Formación en desarrollo de software con enfoque en programación backend y frontend.
 
                             // Education Card 2
                             .card.shadow.border-0.rounded-4.mb-5
@@ -93,15 +77,14 @@ html(lang='en')
                                     .row.align-items-center.gx-5
                                         .col.text-center.text-lg-start.mb-4.mb-lg-0
                                             .bg-light.p-4.rounded-4
-                                                .text-secondary.fw-bolder.mb-2 2011 - 2015
+                                                .text-secondary.fw-bolder.mb-2 2005
                                                 .mb-2
-                                                    .small.fw-bolder ULA
-                                                    .small.text-muted Los Angeles, CA
+                                                    .small.fw-bolder E.P.E.T Número 1
+                                                    .small.text-muted San Juan, Argentina
                                                 .fst-italic
-                                                    .small.text-muted Undergraduate
-                                                    .small.text-muted Computer Science
+                                                    .small.text-muted Técnico en Electrónica Industrial
                                         .col-lg-8
-                                            div Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus laudantium, voluptatem quis repellendus eaque sit animi illo ipsam amet officiis corporis sed aliquam non voluptate corrupti excepturi maxime porro fuga.
+                                            div Formación técnica en electrónica industrial con habilidades en mantenimiento y reparación de sistemas electrónicos.
 
                         // Divider
                         .pb-5
@@ -117,42 +100,51 @@ html(lang='en')
                                             .feature.bg-primary.bg-gradient-primary-to-secondary.text-white.rounded-3.me-3
                                                 i.bi.bi-tools
                                             h3.fw-bolder.mb-0
-                                                span.text-gradient.d-inline Professional Skills
+                                                span.text-gradient.d-inline Habilidades Técnicas
                                         .row.row-cols-1.row-cols-md-3.mb-4
                                             .col.mb-4.mb-md-0
-                                                .d-flex.align-items-center.bg-light.rounded-4.p-3.h-100 SEO/SEM Marketing
+                                                .d-flex.align-items-center.bg-light.rounded-4.p-3.h-100 Java
                                             .col.mb-4.mb-md-0
-                                                .d-flex.align-items-center.bg-light.rounded-4.p-3.h-100 Statistical Analysis
+                                                .d-flex.align-items-center.bg-light.rounded-4.p-3.h-100 Quarkus
                                             .col
-                                                .d-flex.align-items-center.bg-light.rounded-4.p-3.h-100 Web Development
+                                                .d-flex.align-items-center.bg-light.rounded-4.p-3.h-100 Spring Boot
+                                        .row.row-cols-1.row-cols-md-3.mb-4
+                                            .col.mb-4.mb-md-0
+                                                .d-flex.align-items-center.bg-light.rounded-4.p-3.h-100 JavaScript
+                                            .col.mb-4.mb-md-0
+                                                .d-flex.align-items-center.bg-light.rounded-4.p-3.h-100 React
+                                            .col
+                                                .d-flex.align-items-center.bg-light.rounded-4.p-3.h-100 TypeScript
+                                        .row.row-cols-1.row-cols-md-3.mb-4
+                                            .col.mb-4.mb-md-0
+                                                .d-flex.align-items-center.bg-light.rounded-4.p-3.h-100 Git
+                                            .col.mb-4.mb-md-0
+                                                .d-flex.align-items-center.bg-light.rounded-4.p-3.h-100 Swagger
+                                            .col
+                                                .d-flex.align-items-center.bg-light.rounded-4.p-3.h-100 Linux
+                                        .row.row-cols-1.row-cols-md-3.mb-4
+                                            .col.mb-4.mb-md-0
+                                                .d-flex.align-items-center.bg-light.rounded-4.p-3.h-100 PostgreSQL
+                                            .col.mb-4.mb-md-0
+                                                .d-flex.align-items-center.bg-light.rounded-4.p-3.h-100 MySQL
+                                            .col
+                                                .d-flex.align-items-center.bg-light.rounded-4.p-3.h-100 MongoDB
                                         .row.row-cols-1.row-cols-md-3
                                             .col.mb-4.mb-md-0
-                                                .d-flex.align-items-center.bg-light.rounded-4.p-3.h-100 Network Security
-                                            .col.mb-4.mb-md-0
-                                                .d-flex.align-items-center.bg-light.rounded-4.p-3.h-100 Adobe Software Suite
-                                            .col
-                                                .d-flex.align-items-center.bg-light.rounded-4.p-3.h-100 User Interface Design
+                                                .d-flex.align-items-center.bg-light.rounded-4.p-3.h-100 JWT
+
                                     // Languages list
                                     .mb-0
                                         .d-flex.align-items-center.mb-4
                                             .feature.bg-primary.bg-gradient-primary-to-secondary.text-white.rounded-3.me-3
                                                 i.bi.bi-code-slash
                                             h3.fw-bolder.mb-0
-                                                span.text-gradient.d-inline Languages
+                                                span.text-gradient.d-inline Idiomas
                                         .row.row-cols-1.row-cols-md-3.mb-4
                                             .col.mb-4.mb-md-0
-                                                .d-flex.align-items-center.bg-light.rounded-4.p-3.h-100 HTML
+                                                .d-flex.align-items-center.bg-light.rounded-4.p-3.h-100 Español (Nativo)
                                             .col.mb-4.mb-md-0
-                                                .d-flex.align-items-center.bg-light.rounded-4.p-3.h-100 CSS
-                                            .col
-                                                .d-flex.align-items-center.bg-light.rounded-4.p-3.h-100 JavaScript
-                                        .row.row-cols-1.row-cols-md-3
-                                            .col.mb-4.mb-md-0
-                                                .d-flex.align-items-center.bg-light.rounded-4.p-3.h-100 Python
-                                            .col.mb-4.mb-md-0
-                                                .d-flex.align-items-center.bg-light.rounded-4.p-3.h-100 Ruby
-                                            .col
-                                                .d-flex.align-items-center.bg-light.rounded-4.p-3.h-100 Node.js
+                                                .d-flex.align-items-center.bg-light.rounded-4.p-3.h-100 Inglés (Intermedio)
 
         // Footer
         include includes/footer.pug
