--- a/src/pug/includes/footer.pug
+++ b/src/pug/includes/footer.pug
@@ -1,11 +1,6 @@
 footer.bg-white.py-4.mt-auto
     .container.px-5
-        .row.align-items-center.justify-content-between.flex-column.flex-sm-row
+        .row.align-items-center.justify-content-center.flex-column.flex-sm-row
             .col-auto
-                .small.m-0 Copyright &copy; Your Website 2023
-            .col-auto
-                a.small(href='#!') Privacy
-                span.mx-1 &middot;
-                a.small(href='#!') Terms
-                span.mx-1 &middot;
-                a.small(href='#!') Contact
+                .small.m-0 Copyright &copy; Pablo Moya 2025
+           
