--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -1,14 +1,13 @@
 doctype html
-html(lang='en')
+html(lang='es')
 
     head
-
         meta(charset='utf-8')
         meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
-        meta(name='description', content='')
-        meta(name='author', content='')
+        meta(name='description', content='Portafolio de Pablo Mario Moya, Backend Developer con experiencia en Java, Spring Boot, Rust y más.')
+        meta(name='author', content='Pablo Mario Moya')
 
-        title Personal - Start Bootstrap Theme
+        title Pablo Moya - Backend Developer
 
         // Favicon
         link(rel='icon', type='image/x-icon', href='assets/favicon.ico')
@@ -30,20 +29,18 @@ html(lang='en')
                             // Header text content
                             .text-center.text-xxl-start
                                 .badge.bg-gradient-primary-to-secondary.text-white.mb-4
-                                    .text-uppercase Design &middot; Development &middot; Marketing
-                                .fs-3.fw-light.text-muted I can help your business to
+                                    .text-uppercase Backend &middot; Desarrollo &middot; Innovación
+                                .fs-3.fw-light.text-muted Puedo ayudarte a
                                 h1.display-3.fw-bolder.mb-5
-                                    span.text-gradient.d-inline Get online and grow fast
+                                    span.text-gradient.d-inline Crear soluciones eficientes y escalables
                                 .d-grid.gap-3.d-sm-flex.justify-content-sm-center.justify-content-xxl-start.mb-3
-                                    a.btn.btn-primary.btn-lg.px-5.py-3.me-sm-3.fs-6.fw-bolder(href='resume.html') Resume
-                                    a.btn.btn-outline-dark.btn-lg.px-5.py-3.fs-6.fw-bolder(href='projects.html') Projects
+                                    a.btn.btn-primary.btn-lg.px-5.py-3.me-sm-3.fs-6.fw-bolder(href='resume.html') Ver CV
+                                    a.btn.btn-outline-dark.btn-lg.px-5.py-3.fs-6.fw-bolder(href='projects.html') Proyectos
                         .col-xxl-7
                             // Header profile picture
                             .d-flex.justify-content-center.mt-5.mt-xxl-0
                                 .profile.bg-gradient-primary-to-secondary
-                                    // TIP: For best results, use a photo with a transparent background like the demo example below
-                                    // Watch a tutorial on how to do this on YouTube (link)
-                                    img.profile-img(src='assets/profile.png', alt='...')
+                                    img.profile-img(src='assets/profile.png', alt='Pablo Mario Moya')
                                     .dots-1
                                         include includes/svg-dots.pug
                                     .dots-2
@@ -60,15 +57,13 @@ html(lang='en')
                         .col-xxl-8
                             .text-center.my-5
                                 h2.display-5.fw-bolder
-                                    span.text-gradient.d-inline About Me
-                                p.lead.fw-light.mb-4 My name is Start Bootstrap and I help brands grow.
-                                p.text-muted Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit dolorum itaque qui unde quisquam consequatur autem. Eveniet quasi nobis aliquid cumque officiis sed rem iure ipsa! Praesentium ratione atque dolorem?
+                                    span.text-gradient.d-inline Sobre Mí
+                                p.lead.fw-light.mb-4 Soy Pablo Mario Moya, un apasionado desarrollador backend con experiencia en Java, Spring Boot, Quarkus y más.
+                                p.text-muted Me especializo en crear soluciones eficientes y escalables, trabajando con metodologías ágiles y tecnologías modernas. Mi enfoque meticuloso y mi capacidad para trabajar en equipo me permiten contribuir al éxito de los proyectos.
                                 .d-flex.justify-content-center.fs-2.gap-4
-                                    a.text-gradient(href="#!") 
-                                        i.bi.bi-twitter
-                                    a.text-gradient(href="#!") 
+                                    a.text-gradient(href='https://linkedin.com/in/pablo-m-moya/', target='_blank')
                                         i.bi.bi-linkedin
-                                    a.text-gradient(href="#!") 
+                                    a.text-gradient(href='https://github.com/tuusuario', target='_blank')
                                         i.bi.bi-github
 
         // Footer
