reparada vista de proyectos

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -63,7 +63,7 @@ html(lang='es')
                                 .d-flex.justify-content-center.fs-2.gap-4
                                     a.text-gradient(href='https://linkedin.com/in/pablo-m-moya/', target='_blank')
                                         i.bi.bi-linkedin
-                                    a.text-gradient(href='https://github.com/tuusuario', target='_blank')
+                                    a.text-gradient(href='https://github.com/Mpablom', target='_blank')
                                         i.bi.bi-github
 
         // Footer
