agregue descarga de CV

--- a/src/pug/resume.pug
+++ b/src/pug/resume.pug
@@ -35,7 +35,7 @@ html(lang='es')
                             .d-flex.align-items-center.justify-content-between.mb-4
                                 h2.text-primary.fw-bolder.mb-0 Experiencia Laboral
                                 // Download resume button
-                                a.btn.btn-primary.px-4.py-3(href='#!')
+                                a.btn.btn-primary.px-4.py-3(href='./assets/Pablo-Moya-Backend.pdf' download='Pablo-Moya-Backend.pdf')
                                     .d-inline-block.bi.bi-download.me-2
                                     | Descargar CV
 
