reparada vista responsiva

--- a/src/pug/projects.pug
+++ b/src/pug/projects.pug
@@ -34,7 +34,7 @@ html(lang='es')
                             // Project Card 1: ALMEDIN
                             .card.overflow-hidden.shadow.rounded-4.border-0.mb-5
                                 .card-body.p-0
-                                    .d-flex.align-items-center
+                                    .d-flex.align-items-center.card-container
                                         .p-5
                                             h2.fw-bolder
                                                 a(href='https://github.com/Softek-UMSA-Grupo5/TP-Integrador-Obra-Social', target='_blank') ALMEDIN
@@ -50,7 +50,7 @@ html(lang='es')
                             // Project Card 2: Calcbsp
                             .card.overflow-hidden.shadow.rounded-4.border-0.mb-5
                                 .card-body.p-0
-                                    .d-flex.align-items-center
+                                    .d-flex.align-items-center.card-container
                                         .p-5
                                             h2.fw-bolder
                                                 a(href='https://github.com/Mpablom/calcbsp', target='_blank') Calcbsp
@@ -69,7 +69,7 @@ html(lang='es')
                             // Project Card 3: HOMEBANKING
                             .card.overflow-hidden.shadow.rounded-4.border-0.mb-5
                                 .card-body.p-0
-                                    .d-flex.align-items-center
+                                    .d-flex.align-items-center.card-container
                                         .p-5
                                             h2.fw-bolder
                                                 a(href='https://github.com/Mpablom/MindHub_JAVA', target='_blank') HOMEBANKING
@@ -85,7 +85,7 @@ html(lang='es')
                             // Project Card 4: Weather App
                             .card.overflow-hidden.shadow.rounded-4.border-0
                                 .card-body.p-0
-                                    .d-flex.align-items-center
+                                    .d-flex.align-items-center.card-container
                                         .p-5
                                             h2.fw-bolder
                                                 a(href='https://github.com/Mpablom/Mobile', target='_blank') Weather App
